dark mode fixin

--- a/src/components/style/Footer.css
+++ b/src/components/style/Footer.css
@@ -6,7 +6,7 @@
     rgba(0, 158, 116, 0.46) 103.6%,
     rgba(167, 243, 206, 0.96) 123.54%
   );
-  color: var(--white);
+  color: #ffffff;
 }
 
 .footer-container .footer-wrapping {
